env/base/env/namespace.yaml

---
apiVersion: v1
kind: Namespace
metadata:
  name: example
spec:	
  finalizers:	
    - kubernetes
