env/base/env/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app
  namespace: example
spec:
  selector:
    app: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
