env/base/env/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-server-ingress
  namespace: example
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-example
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: example.gorgoro.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example
            port: 
              number: 80
              name: https
  tls:
  - hosts:
    - example.gorgoro.com
    secretName: secret-to sever.crt and server.key # change this shit
